added blob upload url

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
