--- a/.env.development
+++ b/.env.development
@@ -17,3 +17,4 @@ UPLOAD_DIR=uploads/
 RAZORPAY_KEY_ID=your_key_id
 RAZORPAY_KEY_SECRET=your_key_secret
 LOG_LEVEL=debug
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_SjvDJwVPd87VMPEG_t2UxxRDBtmJno6SxMcOLuLVnTcQQio
