--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.2.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "uuid": "^11.1.0"
